Fixed alignment of PlayVideo button text and svg.

--- a/src/styles/buttons.module.css
+++ b/src/styles/buttons.module.css
@@ -36,3 +36,14 @@
         background-color: #FFFFFF;
         color: #6183E4;
 }
+
+#playVideoContainer {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        height: 100%;
+}
+
+#playVideoContainer > span {
+        margin-left: 5px;
+}
